--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Assets/CSS/style.css">
-    <script src="assets/JS/marcaCampo.js" defer></script>
-    <script src="assets/JS/verificaVencedor.js" defer></script>
-    <script src="assets/JS/popupVencedor.js" defer></script>
+    <script src="Assets/JS/marcaCampo.js" defer></script>
+    <script src="Assets/JS/verificaVencedor.js" defer></script>
+    <script src="Assets/JS/popupVencedor.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Righteous" rel="stylesheet">
     <title>Document</title>
 </head>
